added unit tests for junior and kid service